objects/MC4SF__MC_Query_Filter__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Field_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Field_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Query__c</fullName>
        <label>MC Query</label>
        <referenceTo>MC4SF__MC_Query__c</referenceTo>
        <relationshipLabel>MC Query Filters</relationshipLabel>
        <relationshipName>MC_Query_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
                <value>
                    <fullName>Starts With</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does Not Contain</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Less or Equal</fullName>
                </value>
                <value>
                    <fullName>Greater or Equal</fullName>
                </value>
                <value>
                    <fullName>Includes</fullName>
                </value>
                <value>
                    <fullName>Excludes</fullName>
                </value>
                <value>
                    <fullName>Within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>